--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -23,4 +23,5 @@ jobs:
         with:
           node-version: '18.x'
       - run: npm install
+      - run: npm install eslint-config-next --save-dev
       - run: npm test
