--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -57,12 +57,13 @@ jobs:
 
       - run: npm install
       - run: npm run build
-
-      - name: upload artifacts
-        uses: actions/upload-pages-artifact@v1
-        with: 
-          path: "./out"
-
+      
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: ./out
+          
       - name: deploy
         id: deployment
         uses: actions/deploy-pages@v1
