--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -58,11 +58,13 @@ jobs:
       - run: npm install
       - run: npm run build
       
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+      - name: Check if output directory exists
+        run: ls -la ./out
+        
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: my-artifact
-          path: ./out
+          path: "./out"
           
       - name: deploy
         id: deployment
